<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp">
    <TextView
        android:id="@+id/Report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report"
        android:padding="8dp"/>
    <TextView
        android:id="@+id/copy_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy_link"
        android:padding="8dp"/>
    <TextView
        android:id="@+id/turn_on_post_noti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_on_post_notification"
        android:padding="8dp"/>
    <TextView
        android:id="@+id/share_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_share"
        android:padding="8dp"/>
    <TextView
        android:id="@+id/unfollow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unfollow"
        android:padding="8dp"/>
    <TextView
        android:id="@+id/mute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mute"
        android:padding="8dp"/>
</LinearLayout>