<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/Profile"
            android:icon="@drawable/ic_add_user"
            android:title="@string/profile" />

<!--        <item-->
<!--            android:id="@+id/Message"-->
<!--            android:icon="@drawable/ic_chat"-->
<!--            android:title="@string/chat" />-->

        <item
            android:id="@+id/SearchUser"
            android:icon="@drawable/ic_search"
            android:title="@string/search_user" />



    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />

<!--            <item-->
<!--                android:id="@+id/nav_send"-->
<!--                android:icon="@drawable/ic_menu_send"-->
<!--                android:title="@string/menu_send" />-->

            <item
                android:id="@+id/LogOut"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />


        </menu>
    </item>


</menu>