<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_knowledge">

    <fragment
        android:id="@+id/navigation_knowledge"
        android:name="com.sconti.studentcontinent.activity.alltabs.ui.knowledge.KnowledgeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_outdoor"
        android:name="com.sconti.studentcontinent.activity.alltabs.ui.outdoor.OutdoorFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_games"
        android:name="com.sconti.studentcontinent.activity.alltabs.ui.games.GamesFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_aspirations"
        android:name="com.sconti.studentcontinent.activity.alltabs.ui.aspiration.AspirationFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>