<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Liner_login_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="Suspicious0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/HeadLine_login_page"
                style="@style/viewParent.headerText.NoMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:textAllCaps="true"
                android:text="@string/login"
                android:textColor="@color/lightGrey" />

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="1dp"
                android:background="@color/lightGrey"
                android:gravity="center" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/roboto"
                android:text="@string/name"
                android:textAllCaps="false"
                android:textColor="@color/lightGrey"
                android:textSize="18sp" />

            <TextView
                style="@style/viewParent.headerText.NoMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/network_of_young_minds"
                android:visibility="gone" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:src="@drawable/logo"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/ic_rectangle_phone_number"
                android:backgroundTint="@null"
                android:hint="@string/enter_name"
                android:maxLines="1"
                android:paddingStart="25dp"
                android:textColor="@color/lightGrey"
                tools:ignore="RtlSymmetry,TextFields" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|top"
                android:orientation="vertical">

                <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                    android:id="@+id/UpdateNameButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="40dp"
                    style="@style/loginButton"
                    android:layout_marginEnd="32dp"
                    android:text="@string/next"
                    android:gravity="center"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.34"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.611" />


                <TextView
                    android:id="@+id/privacyPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/by_continuing_you_agree_to_equi_terms_and_conditions_and_privacy_policy"
                    android:textColor="@color/lightGrey"
                    android:textSize="12sp" />

                <ProgressBar
                    android:id="@+id/UpdateNameProgressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:layout_marginTop="20dp"
                    android:visibility="gone" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>