<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.starterscreen.CollegeSelectionActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/PrimaryBlue"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:gravity="center|left"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/ic_group_9715" />


            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="@string/college" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8.5"
            android:background="@drawable/liner_layout_bg"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/your_graduation_college"
                android:textColor="@color/lightBlack"
                android:textSize="18sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="260dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@color/lightGrey"
                android:gravity="center" />

            <EditText
                android:id="@+id/editTextCollegeName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="35dp"
                android:background="@drawable/ic_rectangle_phone_number"
                android:backgroundTint="@null"
                android:hint="@string/enter_collage_name"
                android:textColor="@color/lightGrey"
                android:paddingStart="25dp"
                tools:ignore="RtlSymmetry,TextFields" />


            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/buttonNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:text="@string/next"
                style="@style/loginButton"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:layout_marginEnd="35dp"
                android:gravity="center"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.34"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.611" />


        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />



</androidx.constraintlayout.widget.ConstraintLayout>